# shogi_engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp  app.h  main.cpp
core/: CMakeLists.txt
core/engine/: Bitboard.cu  Bitboard.h  Board.cpp  Board.cu  Board.h  BoardVisualization.h  CPUsearchHelpers.cu  CPUsearchHelpers.h  GPUsearchHelpers.cu  GPUsearchHelpers.h  GameTree.cpp  GameTree.cu  GameTree.h  MoveGen.cpp  MoveGen.cu  MoveGen.h  MoveGenHelpers.cpp  MoveGenHelpers.cu  MoveGenHelpers.h  Rules.h  Square.h  USIconverter.cu  USIconverter.h  ai.cpp  ai.h  cpuInterface.cu  cpuInterface.h  engine.cpp  engine.cu  evaluation.cu  evaluation.h  game.h  gpuInterface.cu  gpuInterface.h  kernels.cu  lookUpTables.cu  lookUpTables.h  multithreading.cu  multithreading.h  search.cu  (+4 more)
core/include/: engine.h
include/: shogi_engine.h  shogi_engine2.h
include/shogi/: engine.hpp
lib/: Bitboard.cu  Bitboard.h  Board.cu  Board.h  CMakeLists.txt  MoveGen.cu  MoveGen.h  Rules.h  engine.cpp  instance.cpp  instance.hpp  interface.cpp  interface.hpp  kernels.cu  parser.cpp  parser.hpp
lib/command/: command_base.hpp  debug.hpp  gameover.hpp  go.hpp  invoker.cpp  invoker.hpp  isready.hpp  ponderhit.hpp  position.hpp  quit.hpp  setoption.hpp  stop.hpp  usi.hpp
lib/engine/: Bitboard.h  Board.cpp  Board.h  BoardVisualization.h  MoveGen.cpp  MoveGen.h  MoveGenHelpers.cpp  MoveGenHelpers.h  Rules.h  Square.h  engine.cpp  kernels.cu  shogi_engine.cpp
lib/include/: shogi_engine.h
lib/option/: options.hpp  types.hpp
lib/result/: id.hpp  option.hpp  readyok.hpp  result_base.hpp  result_list.hpp  usiok.hpp
lib/utils/: thread_safe_queue.hpp
tests/: CMakeLists.txt  USIconversionTests.cpp  bitboardTests.cpp  example_test.cpp  main.cpp  moveGenTests.cpp
